db_engine_new/Engine/Parser/customSQLParser.py
# Generated from .\parser_wip\customSQL.g4 by ANTLR 4.11.1
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys

if sys.version_info[1] > 5:
    from typing import TextIO
else:
    from typing.io import TextIO




class customSQLParser(Parser):
    grammarFileName = "customSQL.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [DFA(ds, i) for i, ds in enumerate(atn.decisionToState)]

    sharedContextCache = PredictionContextCache()

    literalNames = ["<INVALID>", "'USE'", "'SELECT'", "'FROM'", "','",
                    "'*'", "'WHERE'", "'AND'", "'OR'", "'='", "'>'", "'<'",
                    "'>='", "'<='", "'!='", "'NOT'", "'LIKE'", "'IN'",
                    "'INSERT INTO'", "'('", "')'", "'VALUES'", "'UPDATE'",
                    "'SET'", "'DELETE FROM'", "'CREATE'", "'TABLE'", "'SCHEMA'",
                    "'UINT'", "'INT'", "'VARCHAR'", "'USHORT'", "'SHORT'",
                    "'ULONG'", "'LONG'", "'FLOAT'", "'DOUBLE'", "'DROP'",
                    "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>",
                    "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>",
                    "';'"]

    symbolicNames = ["<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>",
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>",
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>",
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>",
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>",
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>",
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>",
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>",
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>",
                     "<INVALID>", "<INVALID>", "ID", "INT", "FLOAT", "STRING",
                     "BOOLEAN", "WS", "COMMENT", "MULTI_COMMENT", "END"]

    RULE_statement = 0
    RULE_use_statement = 1
    RULE_schema_name = 2
    RULE_select_statement = 3
    RULE_columns = 4
    RULE_column = 5
    RULE_table_name = 6
    RULE_where_clause = 7
    RULE_condition = 8
    RULE_operator = 9
    RULE_value = 10
    RULE_insert_statement = 11
    RULE_values = 12
    RULE_update_statement = 13
    RULE_assignment = 14
    RULE_delete_statement = 15
    RULE_create_statement = 16
    RULE_column_def = 17
    RULE_type = 18
    RULE_drop_statement = 19

    ruleNames = ["statement", "use_statement", "schema_name", "select_statement",
                 "columns", "column", "table_name", "where_clause", "condition",
                 "operator", "value", "insert_statement", "values", "update_statement",
                 "assignment", "delete_statement", "create_statement",
                 "column_def", "type", "drop_statement"]

    EOF = Token.EOF
    T__0 = 1
    T__1 = 2
    T__2 = 3
    T__3 = 4
    T__4 = 5
    T__5 = 6
    T__6 = 7
    T__7 = 8
    T__8 = 9
    T__9 = 10
    T__10 = 11
    T__11 = 12
    T__12 = 13
    T__13 = 14
    T__14 = 15
    T__15 = 16
    T__16 = 17
    T__17 = 18
    T__18 = 19
    T__19 = 20
    T__20 = 21
    T__21 = 22
    T__22 = 23
    T__23 = 24
    T__24 = 25
    T__25 = 26
    T__26 = 27
    T__27 = 28
    T__28 = 29
    T__29 = 30
    T__30 = 31
    T__31 = 32
    T__32 = 33
    T__33 = 34
    T__34 = 35
    T__35 = 36
    T__36 = 37
    ID = 38
    INT = 39
    FLOAT = 40
    STRING = 41
    BOOLEAN = 42
    WS = 43
    COMMENT = 44
    MULTI_COMMENT = 45
    END = 46

    def __init__(self, input: TokenStream, output: TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.11.1")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None

    class StatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent: ParserRuleContext = None, invokingState: int = -1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def use_statement(self):
            return self.getTypedRuleContext(customSQLParser.Use_statementContext, 0)

        def select_statement(self):
            return self.getTypedRuleContext(customSQLParser.Select_statementContext, 0)

        def insert_statement(self):
            return self.getTypedRuleContext(customSQLParser.Insert_statementContext, 0)

        def update_statement(self):
            return self.getTypedRuleContext(customSQLParser.Update_statementContext, 0)

        def delete_statement(self):
            return self.getTypedRuleContext(customSQLParser.Delete_statementContext, 0)

        def create_statement(self):
            return self.getTypedRuleContext(customSQLParser.Create_statementContext, 0)

        def drop_statement(self):
            return self.getTypedRuleContext(customSQLParser.Drop_statementContext, 0)

        def EOF(self):
            return self.getToken(customSQLParser.EOF, 0)

        def getRuleIndex(self):
            return customSQLParser.RULE_statement

        def enterRule(self, listener: ParseTreeListener):
            if hasattr(listener, "enterStatement"):
                listener.enterStatement(self)

        def exitRule(self, listener: ParseTreeListener):
            if hasattr(listener, "exitStatement"):
                listener.exitStatement(self)

    def statement(self):

        localctx = customSQLParser.StatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_statement)
        try:
            self.state = 48
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [1]:
                self.enterOuterAlt(localctx, 1)
                self.state = 40
                self.use_statement()
                pass
            elif token in [2]:
                self.enterOuterAlt(localctx, 2)
                self.state = 41
                self.select_statement()
                pass
            elif token in [18]:
                self.enterOuterAlt(localctx, 3)
                self.state = 42
                self.insert_statement()
                pass
            elif token in [22]:
                self.enterOuterAlt(localctx, 4)
                self.state = 43
                self.update_statement()
                pass
            elif token in [24]:
                self.enterOuterAlt(localctx, 5)
                self.state = 44
                self.delete_statement()
                pass
            elif token in [25]:
                self.enterOuterAlt(localctx, 6)
                self.state = 45
                self.create_statement()
                pass
            elif token in [37]:
                self.enterOuterAlt(localctx, 7)
                self.state = 46
                self.drop_statement()
                pass
            elif token in [-1]:
                self.enterOuterAlt(localctx, 8)
                self.state = 47
                self.match(customSQLParser.EOF)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Use_statementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent: ParserRuleContext = None, invokingState: int = -1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def schema_name(self):
            return self.getTypedRuleContext(customSQLParser.Schema_nameContext, 0)

        def END(self):
            return self.getToken(customSQLParser.END, 0)

        def getRuleIndex(self):
            return customSQLParser.RULE_use_statement

        def enterRule(self, listener: ParseTreeListener):
            if hasattr(listener, "enterUse_statement"):
                listener.enterUse_statement(self)

        def exitRule(self, listener: ParseTreeListener):
            if hasattr(listener, "exitUse_statement"):
                listener.exitUse_statement(self)

    def use_statement(self):

        localctx = customSQLParser.Use_statementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_use_statement)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 50
            self.match(customSQLParser.T__0)
            self.state = 51
            self.schema_name()
            self.state = 52
            self.match(customSQLParser.END)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Schema_nameContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent: ParserRuleContext = None, invokingState: int = -1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(customSQLParser.ID, 0)

        def getRuleIndex(self):
            return customSQLParser.RULE_schema_name

        def enterRule(self, listener: ParseTreeListener):
            if hasattr(listener, "enterSchema_name"):
                listener.enterSchema_name(self)

        def exitRule(self, listener: ParseTreeListener):
            if hasattr(listener, "exitSchema_name"):
                listener.exitSchema_name(self)

    def schema_name(self):

        localctx = customSQLParser.Schema_nameContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_schema_name)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 54
            self.match(customSQLParser.ID)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Select_statementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent: ParserRuleContext = None, invokingState: int = -1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def columns(self):
            return self.getTypedRuleContext(customSQLParser.ColumnsContext, 0)

        def table_name(self):
            return self.getTypedRuleContext(customSQLParser.Table_nameContext, 0)

        def END(self):
            return self.getToken(customSQLParser.END, 0)

        def where_clause(self):
            return self.getTypedRuleContext(customSQLParser.Where_clauseContext, 0)

        def getRuleIndex(self):
            return customSQLParser.RULE_select_statement

        def enterRule(self, listener: ParseTreeListener):
            if hasattr(listener, "enterSelect_statement"):
                listener.enterSelect_statement(self)

        def exitRule(self, listener: ParseTreeListener):
            if hasattr(listener, "exitSelect_statement"):
                listener.exitSelect_statement(self)

    def select_statement(self):

        localctx = customSQLParser.Select_statementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_select_statement)
        self._la = 0  # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 56
            self.match(customSQLParser.T__1)
            self.state = 57
            self.columns()
            self.state = 58
            self.match(customSQLParser.T__2)
            self.state = 59
            self.table_name()
            self.state = 61
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la == 6:
                self.state = 60
                self.where_clause()

            self.state = 63
            self.match(customSQLParser.END)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ColumnsContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent: ParserRuleContext = None, invokingState: int = -1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def column(self, i: int = None):
            if i is None:
                return self.getTypedRuleContexts(customSQLParser.ColumnContext)
            else:
                return self.getTypedRuleContext(customSQLParser.ColumnContext, i)

        def getRuleIndex(self):
            return customSQLParser.RULE_columns

        def enterRule(self, listener: ParseTreeListener):
            if hasattr(listener, "enterColumns"):
                listener.enterColumns(self)

        def exitRule(self, listener: ParseTreeListener):
            if hasattr(listener, "exitColumns"):
                listener.exitColumns(self)

    def columns(self):

        localctx = customSQLParser.ColumnsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_columns)
        self._la = 0  # Token type
        try:
            self.state = 74
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [38]:
                self.enterOuterAlt(localctx, 1)
                self.state = 65
                self.column()
                self.state = 70
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la == 4:
                    self.state = 66
                    self.match(customSQLParser.T__3)
                    self.state = 67
                    self.column()
                    self.state = 72
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                pass
            elif token in [5]:
                self.enterOuterAlt(localctx, 2)
                self.state = 73
                self.match(customSQLParser.T__4)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ColumnContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent: ParserRuleContext = None, invokingState: int = -1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(customSQLParser.ID, 0)

        def getRuleIndex(self):
            return customSQLParser.RULE_column

        def enterRule(self, listener: ParseTreeListener):
            if hasattr(listener, "enterColumn"):
                listener.enterColumn(self)

        def exitRule(self, listener: ParseTreeListener):
            if hasattr(listener, "exitColumn"):
                listener.exitColumn(self)

    def column(self):

        localctx = customSQLParser.ColumnContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_column)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 76
            self.match(customSQLParser.ID)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Table_nameContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent: ParserRuleContext = None, invokingState: int = -1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(customSQLParser.ID, 0)

        def getRuleIndex(self):
            return customSQLParser.RULE_table_name

        def enterRule(self, listener: ParseTreeListener):
            if hasattr(listener, "enterTable_name"):
                listener.enterTable_name(self)

        def exitRule(self, listener: ParseTreeListener):
            if hasattr(listener, "exitTable_name"):
                listener.exitTable_name(self)

    def table_name(self):

        localctx = customSQLParser.Table_nameContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_table_name)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 78
            self.match(customSQLParser.ID)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Where_clauseContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent: ParserRuleContext = None, invokingState: int = -1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def condition(self, i: int = None):
            if i is None:
                return self.getTypedRuleContexts(customSQLParser.ConditionContext)
            else:
                return self.getTypedRuleContext(customSQLParser.ConditionContext, i)

        def getRuleIndex(self):
            return customSQLParser.RULE_where_clause

        def enterRule(self, listener: ParseTreeListener):
            if hasattr(listener, "enterWhere_clause"):
                listener.enterWhere_clause(self)

        def exitRule(self, listener: ParseTreeListener):
            if hasattr(listener, "exitWhere_clause"):
                listener.exitWhere_clause(self)

    def where_clause(self):

        localctx = customSQLParser.Where_clauseContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_where_clause)
        self._la = 0  # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 80
            self.match(customSQLParser.T__5)
            self.state = 81
            self.condition()
            self.state = 86
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la == 7 or _la == 8:
                self.state = 82
                _la = self._input.LA(1)
                if not (_la == 7 or _la == 8):
                    self._errHandler.recoverInline(self)
                else:
                    self._errHandler.reportMatch(self)
                    self.consume()
                self.state = 83
                self.condition()
                self.state = 88
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ConditionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent: ParserRuleContext = None, invokingState: int = -1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def column(self):
            return self.getTypedRuleContext(customSQLParser.ColumnContext, 0)

        def operator(self):
            return self.getTypedRuleContext(customSQLParser.OperatorContext, 0)

        def value(self):
            return self.getTypedRuleContext(customSQLParser.ValueContext, 0)

        def getRuleIndex(self):
            return customSQLParser.RULE_condition

        def enterRule(self, listener: ParseTreeListener):
            if hasattr(listener, "enterCondition"):
                listener.enterCondition(self)

        def exitRule(self, listener: ParseTreeListener):
            if hasattr(listener, "exitCondition"):
                listener.exitCondition(self)

    def condition(self):

        localctx = customSQLParser.ConditionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_condition)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 89
            self.column()
            self.state = 90
            self.operator()
            self.state = 91
            self.value()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class OperatorContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent: ParserRuleContext = None, invokingState: int = -1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def getRuleIndex(self):
            return customSQLParser.RULE_operator

        def enterRule(self, listener: ParseTreeListener):
            if hasattr(listener, "enterOperator"):
                listener.enterOperator(self)

        def exitRule(self, listener: ParseTreeListener):
            if hasattr(listener, "exitOperator"):
                listener.exitOperator(self)

    def operator(self):

        localctx = customSQLParser.OperatorContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_operator)
        self._la = 0  # Token type
        try:
            self.state = 107
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input, 7, self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 93
                self.match(customSQLParser.T__8)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 94
                self.match(customSQLParser.T__9)
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 95
                self.match(customSQLParser.T__10)
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 96
                self.match(customSQLParser.T__11)
                pass

            elif la_ == 5:
                self.enterOuterAlt(localctx, 5)
                self.state = 97
                self.match(customSQLParser.T__12)
                pass

            elif la_ == 6:
                self.enterOuterAlt(localctx, 6)
                self.state = 98
                self.match(customSQLParser.T__13)
                pass

            elif la_ == 7:
                self.enterOuterAlt(localctx, 7)
                self.state = 100
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la == 15:
                    self.state = 99
                    self.match(customSQLParser.T__14)

                self.state = 102
                self.match(customSQLParser.T__15)
                pass

            elif la_ == 8:
                self.enterOuterAlt(localctx, 8)
                self.state = 104
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la == 15:
                    self.state = 103
                    self.match(customSQLParser.T__14)

                self.state = 106
                self.match(customSQLParser.T__16)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ValueContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent: ParserRuleContext = None, invokingState: int = -1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def INT(self):
            return self.getToken(customSQLParser.INT, 0)

        def FLOAT(self):
            return self.getToken(customSQLParser.FLOAT, 0)

        def STRING(self):
            return self.getToken(customSQLParser.STRING, 0)

        def BOOLEAN(self):
            return self.getToken(customSQLParser.BOOLEAN, 0)

        def getRuleIndex(self):
            return customSQLParser.RULE_value

        def enterRule(self, listener: ParseTreeListener):
            if hasattr(listener, "enterValue"):
                listener.enterValue(self)

        def exitRule(self, listener: ParseTreeListener):
            if hasattr(listener, "exitValue"):
                listener.exitValue(self)

    def value(self):

        localctx = customSQLParser.ValueContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_value)
        self._la = 0  # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 109
            _la = self._input.LA(1)
            if not (((_la) & ~0x3f) == 0 and ((1 << _la) & 8246337208320) != 0):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Insert_statementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent: ParserRuleContext = None, invokingState: int = -1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def table_name(self):
            return self.getTypedRuleContext(customSQLParser.Table_nameContext, 0)

        def columns(self):
            return self.getTypedRuleContext(customSQLParser.ColumnsContext, 0)

        def values(self):
            return self.getTypedRuleContext(customSQLParser.ValuesContext, 0)

        def END(self):
            return self.getToken(customSQLParser.END, 0)

        def getRuleIndex(self):
            return customSQLParser.RULE_insert_statement

        def enterRule(self, listener: ParseTreeListener):
            if hasattr(listener, "enterInsert_statement"):
                listener.enterInsert_statement(self)

        def exitRule(self, listener: ParseTreeListener):
            if hasattr(listener, "exitInsert_statement"):
                listener.exitInsert_statement(self)

    def insert_statement(self):

        localctx = customSQLParser.Insert_statementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_insert_statement)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 111
            self.match(customSQLParser.T__17)
            self.state = 112
            self.table_name()
            self.state = 113
            self.match(customSQLParser.T__18)
            self.state = 114
            self.columns()
            self.state = 115
            self.match(customSQLParser.T__19)
            self.state = 116
            self.match(customSQLParser.T__20)
            self.state = 117
            self.match(customSQLParser.T__18)
            self.state = 118
            self.values()
            self.state = 119
            self.match(customSQLParser.T__19)
            self.state = 120
            self.match(customSQLParser.END)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ValuesContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent: ParserRuleContext = None, invokingState: int = -1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def value(self, i: int = None):
            if i is None:
                return self.getTypedRuleContexts(customSQLParser.ValueContext)
            else:
                return self.getTypedRuleContext(customSQLParser.ValueContext, i)

        def getRuleIndex(self):
            return customSQLParser.RULE_values

        def enterRule(self, listener: ParseTreeListener):
            if hasattr(listener, "enterValues"):
                listener.enterValues(self)

        def exitRule(self, listener: ParseTreeListener):
            if hasattr(listener, "exitValues"):
                listener.exitValues(self)

    def values(self):

        localctx = customSQLParser.ValuesContext(self, self._ctx, self.state)
        self.enterRule(localctx, 24, self.RULE_values)
        self._la = 0  # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 122
            self.value()
            self.state = 127
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la == 4:
                self.state = 123
                self.match(customSQLParser.T__3)
                self.state = 124
                self.value()
                self.state = 129
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Update_statementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent: ParserRuleContext = None, invokingState: int = -1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def table_name(self):
            return self.getTypedRuleContext(customSQLParser.Table_nameContext, 0)

        def assignment(self, i: int = None):
            if i is None:
                return self.getTypedRuleContexts(customSQLParser.AssignmentContext)
            else:
                return self.getTypedRuleContext(customSQLParser.AssignmentContext, i)

        def END(self):
            return self.getToken(customSQLParser.END, 0)

        def where_clause(self):
            return self.getTypedRuleContext(customSQLParser.Where_clauseContext, 0)

        def getRuleIndex(self):
            return customSQLParser.RULE_update_statement

        def enterRule(self, listener: ParseTreeListener):
            if hasattr(listener, "enterUpdate_statement"):
                listener.enterUpdate_statement(self)

        def exitRule(self, listener: ParseTreeListener):
            if hasattr(listener, "exitUpdate_statement"):
                listener.exitUpdate_statement(self)

    def update_statement(self):

        localctx = customSQLParser.Update_statementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 26, self.RULE_update_statement)
        self._la = 0  # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 130
            self.match(customSQLParser.T__21)
            self.state = 131
            self.table_name()
            self.state = 132
            self.match(customSQLParser.T__22)
            self.state = 133
            self.assignment()
            self.state = 138
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la == 4:
                self.state = 134
                self.match(customSQLParser.T__3)
                self.state = 135
                self.assignment()
                self.state = 140
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 142
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la == 6:
                self.state = 141
                self.where_clause()

            self.state = 144
            self.match(customSQLParser.END)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class AssignmentContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent: ParserRuleContext = None, invokingState: int = -1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def column(self):
            return self.getTypedRuleContext(customSQLParser.ColumnContext, 0)

        def value(self):
            return self.getTypedRuleContext(customSQLParser.ValueContext, 0)

        def getRuleIndex(self):
            return customSQLParser.RULE_assignment

        def enterRule(self, listener: ParseTreeListener):
            if hasattr(listener, "enterAssignment"):
                listener.enterAssignment(self)

        def exitRule(self, listener: ParseTreeListener):
            if hasattr(listener, "exitAssignment"):
                listener.exitAssignment(self)

    def assignment(self):

        localctx = customSQLParser.AssignmentContext(self, self._ctx, self.state)
        self.enterRule(localctx, 28, self.RULE_assignment)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 146
            self.column()
            self.state = 147
            self.match(customSQLParser.T__8)
            self.state = 148
            self.value()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Delete_statementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent: ParserRuleContext = None, invokingState: int = -1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def table_name(self):
            return self.getTypedRuleContext(customSQLParser.Table_nameContext, 0)

        def END(self):
            return self.getToken(customSQLParser.END, 0)

        def where_clause(self):
            return self.getTypedRuleContext(customSQLParser.Where_clauseContext, 0)

        def getRuleIndex(self):
            return customSQLParser.RULE_delete_statement

        def enterRule(self, listener: ParseTreeListener):
            if hasattr(listener, "enterDelete_statement"):
                listener.enterDelete_statement(self)

        def exitRule(self, listener: ParseTreeListener):
            if hasattr(listener, "exitDelete_statement"):
                listener.exitDelete_statement(self)

    def delete_statement(self):

        localctx = customSQLParser.Delete_statementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 30, self.RULE_delete_statement)
        self._la = 0  # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 150
            self.match(customSQLParser.T__23)
            self.state = 151
            self.table_name()
            self.state = 153
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la == 6:
                self.state = 152
                self.where_clause()

            self.state = 155
            self.match(customSQLParser.END)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Create_statementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent: ParserRuleContext = None, invokingState: int = -1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def table_name(self):
            return self.getTypedRuleContext(customSQLParser.Table_nameContext, 0)

        def column_def(self, i: int = None):
            if i is None:
                return self.getTypedRuleContexts(customSQLParser.Column_defContext)
            else:
                return self.getTypedRuleContext(customSQLParser.Column_defContext, i)

        def END(self):
            return self.getToken(customSQLParser.END, 0)

        def getRuleIndex(self):
            return customSQLParser.RULE_create_statement

        def enterRule(self, listener: ParseTreeListener):
            if hasattr(listener, "enterCreate_statement"):
                listener.enterCreate_statement(self)

        def exitRule(self, listener: ParseTreeListener):
            if hasattr(listener, "exitCreate_statement"):
                listener.exitCreate_statement(self)

    def create_statement(self):

        localctx = customSQLParser.Create_statementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 32, self.RULE_create_statement)
        self._la = 0  # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 157
            self.match(customSQLParser.T__24)
            self.state = 158
            _la = self._input.LA(1)
            if not (_la == 26 or _la == 27):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
            self.state = 159
            self.table_name()
            self.state = 160
            self.match(customSQLParser.T__18)
            self.state = 161
            self.column_def()
            self.state = 166
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la == 4:
                self.state = 162
                self.match(customSQLParser.T__3)
                self.state = 163
                self.column_def()
                self.state = 168
                self._errHandler.sync(self)
                _la = self._input.LA(1)
